# itmo-compilers

./: README.md
hw-3/: parser.py
hw-3/hw-3-compilers/: main.tex  preamble.tex  titlepage.tex
project/includes/: .clang-format  CMakeLists.txt  doxygen.conf  graph.dot  prog.txt  prog_if.txt  riscv.asm
project/includes/includes/api/: ast_api.h
project/includes/includes/ast/: ast.h  var_dict.h
project/includes/includes/lexer/: lexer.h
project/includes/includes/parser/: parser.h
project/includes/lexer/: struct.l
project/includes/parser/: struct.y
project/includes/src/: main.c
project/includes/src/api/: ast_api.c  ast_riscv_printer.cpp  ast_text_printers.c  ast_walker.h
project/includes/src/ast/: ast.c  var_dict.cpp
project/includes/src/lexer/: lexer.c
project/includes/src/parser/: parser.c
